@startuml
!theme cerulean
left to right direction

class Cliente{
	-id : Integer
	-nome : String
	-endereco : String
	-telefone : String
}

class Produto{
	-id : Integer
	-nome : String
	-descicao : String
	-preco : Double
}

class Venda{
	-id : Integer
	-dataVenda : String
	-descricao : String
	-comprador : Cliente
	-valor : Double
	-pago : boolean
}

class ProdutoVenda{
	-id : Integer
	-venda : Venda
	-produto : Produto
	-quantidade : Integer
	-valor : Double
}

class Usuario{
	-id : Integer
	-login : String
	-senha : String
	-admin : boolean
}

Venda "0..*" -up--> "1" Cliente: pertence
ProdutoVenda  "0..*" ---> "1" Produto : possui
ProdutoVenda "1..*" -up--> "1" Venda : pertence
@enduml